# agents-kit

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  RELEASE.md  SUPPORT.md  package.json  plugin.json
.github/workflows/: ci.yml
adapters/cursor/: daily-docs-sweep.md
gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/server/: ast_dump.json  context.js  dump_ast.js  generate.py  index.js  refactor.js  run_refactor.js  split_refactor.py
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
kit/: .env.example  README.md
kit/adapters/: README.md
kit/agents/: code-reviewer.md  security-auditor.md
kit/harness/: allowed-commands.json  hooks.json
kit/mcp/: mcp-servers.json
lib/: catalog.d.ts  catalog.js  git-security.js  gui-security.js  kit-paths.js  mcp-env.js  security-boundary.js  skills-sh.js  smithery.js
lib/adapters/: antigravity.js  base.js  claude.js  codex.js  cursor.js  index.js
lib/application/: install-skill.js  merge-smithery-mcp.js
lib/defaults/: expert-prompts.js  templates.js
lib/domain/: catalog-ranking.js  errors.js  mcp.js  scope.js
lib/infrastructure/: catalog-clients.js  file-transaction.js  (+3 more)
mcp/: mcp-servers.json
memory/: global_memory.md
scripts/: run-gui.sh  setup-symlinks.sh
test/: adapters.test.js  catalog-ranking.test.js  domain-contracts.test.js  file-transaction.test.js  fs-mcp-kit-store.test.js  http-error-mapper.test.js  install-skill.test.js  merge-smithery-mcp.test.js
(+55 files in other folders)
