[package]
name = "agents-kit"
version = "1.0.0"
description = "agents-kit Cross-Platform Desktop Adapter Hub"
authors = ["agents-kit team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
